[package]
name = "uchat2-bot"
version = "0.1.0"
authors = ["esukmean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full", "io-util", "net"] }
tokio-tungstenite = { git = "https://github.com/snapview/tokio-tungstenite.git" } #tokio 0.3 버전은 아직 git에만 있어서..
log = "*"
simple-logging = "*"
rand = "*"
md5 = "*"
tokio-native-tls = "*"
native-tls = "*"
url = "*"
futures-util = "*"