[package]
name = "uchat2-bot"
version = "0.1.0"
authors = ["esukmean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "io-util", "net"] }
tokio-tungstenite = "*"
log = "*"
simple-logging = "*"
rand = "*"
md5 = "*"
tokio-native-tls = "*"
native-tls = "*"
url = "*"
futures-util = "*"
futures = "*"
bytes = "*"
async-trait = "*"